--- a/RADIANCE/admin/listOfGuards.html
+++ b/RADIANCE/admin/listOfGuards.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-    <script src="../admin/js/script.js">
+    <script src="../admin/js/listOfGuard.js">
 
     </script>
 </body>
